ios tarafı yazıldı

--- a/iosApp/iosApp/Info.plist
+++ b/iosApp/iosApp/Info.plist
@@ -44,5 +44,7 @@
 	</array>
 	<key>UILaunchScreen</key>
 	<dict/>
+    <key>UIUserInterfaceStyle</key>
+    <string>Dark</string>
 </dict>
 </plist>
